fix version mobile

--- a/bc1/style.css
+++ b/bc1/style.css
@@ -15,6 +15,7 @@ h1 {
 }
 .container img{
 margin-top: 50px;
+max-width: 60%;
 }
 
 .navbarr{
